--- a/java/com/android/dialer/app/res/values/x_strings.xml
+++ b/java/com/android/dialer/app/res/values/x_strings.xml
@@ -46,4 +46,15 @@
     <string name="disable_proximity_sensor_summary">Do not turn off touchscreen and display in call based on proximity sensor</string>
     <string name="sensor_settings_titile">Sensors</string>
 
+    <!-- Proximity speaker -->
+    <string name="speaker_settings_label">Proximity speakerphone</string>
+    <string name="prox_auto_speaker_title">Automatic proximity speakerphone</string>
+    <string name="prox_auto_speaker_summary">Enable speakerphone automatically when your phone is removed from your ear</string>
+    <string name="prox_auto_speaker_delay_title">Speakerphone delay</string>
+    <string name="prox_auto_speaker_delay_dialog_title">Speakerphone delay in (ms)</string>
+    <string name="prox_auto_speaker_delay_summary">Speakerphone will be activated in <xliff:g id="number">%d</xliff:g> ms</string>
+    <string name="prox_auto_speaker_incall_only_title">Only while in call</string>
+    <string name="prox_auto_speaker_incall_only_summary_on">On outgoing calls, listener will only become active after the receiving party answers</string>
+    <string name="prox_auto_speaker_incall_only_summary_off">Listener will be active during all offhook call states (default)</string>
+
 </resources>
