--- a/java/com/android/dialer/app/res/values/colt_strings.xml
+++ b/java/com/android/dialer/app/res/values/colt_strings.xml
@@ -54,4 +54,9 @@
     <!-- Dialer postcall -->
     <string name="enable_post_call_title">Post call snackbar</string>
     <string name="enable_post_call_summary">Enable post call notifications at the bottom of screen</string>
+
+    <!-- Smart Options -->
+    <string name="smart_category_title">Gestures</string>
+    <string name="smart_mute_title">Smart mute</string>
+    <string name="smart_mute_summary">Mute the incoming call by flipping the device</string>
 </resources>
