Add back proximity autoanswer feature
Forward port to P

--- a/java/com/android/dialer/app/res/values/x_strings.xml
+++ b/java/com/android/dialer/app/res/values/x_strings.xml
@@ -57,4 +57,7 @@
     <string name="prox_auto_speaker_incall_only_summary_on">On outgoing calls, listener will only become active after the receiving party answers</string>
     <string name="prox_auto_speaker_incall_only_summary_off">Listener will be active during all offhook call states (default)</string>
 
+    <string name="prox_auto_answer_incall_only_title">Auto answer</string>
+    <string name="prox_auto_answer_incall_only_summary">Use proximity sensor for autoanswer</string>
+
 </resources>
