--- a/java/com/android/dialer/app/res/values/x_strings.xml
+++ b/java/com/android/dialer/app/res/values/x_strings.xml
@@ -42,4 +42,8 @@
     <string name="fullscreen_caller_photo_summary">Display full-screen photo in incoming and outgoing calls</string>
     <string name="fullscreen_caller_photo_message">To use, you must restart the application</string>
 
+    <string name="disable_proximity_sensor_title">Disable proximity sensor</string>
+    <string name="disable_proximity_sensor_summary">Do not turn off touchscreen and display in call based on proximity sensor</string>
+    <string name="sensor_settings_titile">Sensors</string>
+
 </resources>
