The ability to set a contact photo on the whole screen for incoming and outgoing calls is added.
syberia: forward port to 10

--- a/java/com/android/dialer/app/res/xml/other_settings.xml
+++ b/java/com/android/dialer/app/res/xml/other_settings.xml
@@ -47,4 +47,10 @@
         android:key="incall_enable_dnd"
         android:title="@string/incall_enable_dnd_title"/>
 
+    <SwitchPreference
+        android:key="fullscreen_caller_photo"
+        android:title="@string/fullscreen_caller_photo_title"
+        android:summary="@string/fullscreen_caller_photo_summary"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
