--- a/java/com/android/dialer/app/res/values/x_strings.xml
+++ b/java/com/android/dialer/app/res/values/x_strings.xml
@@ -60,4 +60,9 @@
     <string name="prox_auto_answer_incall_only_title">Auto answer</string>
     <string name="prox_auto_answer_incall_only_summary">Use proximity sensor for autoanswer</string>
 
+    <!-- Smart Options -->
+    <string name="smart_category_title">Gestures</string>
+    <string name="smart_mute_title">Smart mute</string>
+    <string name="smart_mute_summary">Mute the incoming call by flipping the device</string>
+
 </resources>
