--- a/java/com/android/dialer/app/res/layout/dialtacts_activity.xml
+++ b/java/com/android/dialer/app/res/layout/dialtacts_activity.xml
@@ -47,7 +47,7 @@
       android:layout_marginBottom="@dimen/floating_action_button_margin_bottom"
       android:contentDescription="@string/action_menu_dialpad_button"
       android:src="@drawable/quantum_ic_dialpad_white_24"
-      app:backgroundTint="@color/goolag_deez_nutz"/>
+      app:backgroundTint="?android:attr/colorAccent"/>
 
   <!-- Host container for the contact tile drag shadow -->
   <FrameLayout
