--- a/java/com/android/dialer/main/impl/bottomnav/res/drawable/rectangle.xml
+++ b/java/com/android/dialer/main/impl/bottomnav/res/drawable/rectangle.xml
@@ -4,10 +4,10 @@
 
     <corners android:radius="120dp" />
 
-    <solid android:color="@color/goolag_tint" />
+    <solid android:color="?android:attr/colorAccent" android:fillAlpha="0.3" />
 
     <stroke
         android:width="1dp"
-        android:color="@color/goolag_tint" />
+        android:color="?android:attr/colorAccent" android:strokeAlpha="0.3" />
 
 </shape>
